# metabase-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.py
